# vantio-hypervisor

./: .dockerignore  .gcloudignore  .gitignore  AWS_NITRO_ENCLAVE_ARCHITECTURE.md  Cargo.toml  Dockerfile  LICENSE-ENTERPRISE-COMMERCIAL  README.md  VANTIO_ENTERPRISE_GTM.md  VANTIO_MASTER_DOSSIER.md  VANTIO_OMNISCIENT_CODEX.md  align_v4_physics.sh  cto_ledger.md  dashboard.html  enterprise_control_plane.md  index.html  package-lock.json  plg_wedge.md  rogue  telemetry_engine.py  test_agent.py  v10.0_god_mode_apex.sh  v13.0_matrix_resurrection.py  v14.0_automated_matrix.sh  v14.1_omni_locator.sh  v14_backfill.py  v14_radar.py  v19.0_enterprise_realignment.sh  v19.3_root_alignment.sh  v25.0_neural_uplink.sh  v25.1_neural_uplink_hotfix.sh  v4.7_core_ascension.sh  v4_alignment_radar.sh  v4_ascension_pipeline.sh  v4_cloud_override.sh  v4_cloud_repair.sh  v4_orbital_ascension.sh  v5.1_absolute_perfection.sh  v5_god_mode_alignment.sh  v6.0_omniscient_singularity.sh  (+10 more)
k8s/: monolith-deployment.yaml  monolith-service.yaml
sdk/python/vantio/: session.py
vantio-anomaly-receipt/host/: Cargo.toml
vantio-anomaly-receipt/host/src/: main.rs
vantio-anomaly-receipt/methods/guest/src/: main.rs
vantio-anomaly-record/host/src/: main.rs
vantio-autonomic-core/: Cargo.toml
vantio-autonomic-core/src/: main.rs
vantio-hypervisor/: Cargo.toml  build.rs
vantio-hypervisor-common/: Cargo.toml
vantio-hypervisor-ebpf/: Cargo.toml
vantio-hypervisor-ebpf/.cargo/: config.toml
vantio-hypervisor-ebpf/src/: main.rs
vantio-hypervisor-ebpf/src/network/: egress.rs
vantio-hypervisor/src/: cognitive_engine.rs  main.rs
vantio-l7-proxy/: Cargo.toml
vantio-l7-proxy/src/: main.rs
vantio-monolith/: Cargo.toml  Dockerfile  build.rs
vantio-monolith/proto/: telemetry.proto
vantio-monolith/public/: dashboard.html  docs.html  index.html  ledger.json  telemetry_archive.html
vantio-monolith/src/: main.rs
vantio-monolith/tls/: ca.pem  server.key  server.pem
vantio-node/: Cargo.toml
vantio-node/src/: main.rs
vantio-node/src/cybernetics/: feedback.rs
vantio-oracle/host/: Cargo.toml
vantio-oracle/host/src/: main.rs
vantio-oracle/methods/guest/: Cargo.toml
vantio-oracle/methods/guest/src/: main.rs
vantio-phantom-dimension/: Cargo.toml
vantio-phantom-dimension/src/: main.rs
