[workspace]
members = [
    "vantio-hypervisor",
    "vantio-hypervisor-ebpf", "vantio-l7-proxy", "vantio-node",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[workspace.dependencies]
aya = "0.13"
aya-log = "0.2"
aya-ebpf = "0.1"
aya-log-ebpf = "0.1"
aya-ebpf-bindings = "0.1"
aya-build = "0.1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
cargo_metadata = "0.18"
which = "4.4"
anyhow = "*"
env_logger = "*"
libc = "*"
log = "*"
