[package]
name = "vantio-hypervisor-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
vantio-hypervisor-common = { path = "../vantio-hypervisor-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = { version = "0.1.0", default-features = false }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "vantio-hypervisor"
path = "src/main.rs"
