[package]
name = "vantio-l7-proxy"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
axum = "0.8.8"
hyper = { version = "1.8.1", features = ["full"] }
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { workspace = true, features = ["full"] }
