[package]
name = "vantio-monolith"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-http = { version = "0.5", features = ["cors", "trace", "limit", "set-header"] }
tower = "0.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
axum = "0.8.8"

[workspace]
