[package]
name = "vantio-node"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum = "0.8.8"
aya.workspace = true
aya-log.workspace = true
bytes = "1.11.1"
chrono = "0.4.44"
env_logger.workspace = true
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json"] }
serde_json = "1.0.149"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.6.8", features = ["fs"] }
