[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "^3.0.5" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
axum = "0.8.8"
tokio = { version = "1.50.0", features = ["full"] }
serde_json = "1.0.149"
reqwest = { version = "0.13.2", features = ["json"] }
